--- a/css/tui.css
+++ b/css/tui.css
@@ -31,9 +31,9 @@ img {
     max-width: 800px;
     margin: 2rem auto; /* Added margin for spacing */
     padding: 2rem;
-    background-color: rgba(255, 255, 255, 0.85);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 0.2); /* More transparent */
+    backdrop-filter: blur(7px); /* Increased blur */
+    -webkit-backdrop-filter: blur(7px); /* Increased blur */
     border-radius: 10px;
     border: 1px solid rgba(51, 51, 51, 0.1); /* Subtle border */
 }
@@ -41,9 +41,9 @@ img {
 header, footer {
     border-bottom: 1px solid var(--border-color);
     padding: 1rem 0;
-    background-color: rgba(255, 255, 255, 0.15);
-    backdrop-filter: blur(2px);
-    -webkit-backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 0.1); /* More transparent */
+    backdrop-filter: blur(10px); /* Increased blur */
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .bio-header {
@@ -52,9 +52,9 @@ header, footer {
     max-width: 800px;
     margin: 2rem auto;
     padding: 1rem 2rem;
-    background-color: rgba(255, 255, 255, 0.85);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 0.3); /* More transparent */
+    backdrop-filter: blur(15px); /* Increased blur */
+    -webkit-backdrop-filter: blur(15px);
     border-radius: 10px;
     border: 1px solid rgba(51, 51, 51, 0.1);
 }
